Publish of Github pages from Gradle.

--- a/2.0.0-RC1/index.html
+++ b/2.0.0-RC1/index.html
@@ -672,6 +672,11 @@ table.CodeRay td.code>pre{padding:0}
 <div class="paragraph">
 <p>Javaslang comes along with well designed representations of some of the most basic types which apparently are missing or rudimentary in Java, Tuple and λ.</p>
 </div>
+<div class="imageblock">
+<div class="content">
+<img src="http://javaslang.com/img/doc-tuple-lambda-value.png" alt="doc tuple lambda value">
+</div>
+</div>
 <div class="sect3">
 <h4 id="_tuples">3.1.1. Tuples</h4>
 <div class="paragraph">
@@ -1286,7 +1291,7 @@ limitations under the License.</p>
 <div id="footer">
 <div id="footer-text">
 Version 2.0.0-RC1<br>
-Last updated 2015-11-24 08:36:33 MEZ
+Last updated 2015-11-24 08:49:28 MEZ
 </div>
 </div>
 </body>
