does not seem to be necessary

--- a/2.0.0-RC1/index.html
+++ b/2.0.0-RC1/index.html
@@ -629,7 +629,7 @@ table.CodeRay td.code>pre{padding:0}
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/javaslang-collections.png?w=660" alt="Javaslang Collections">
+<img src="images/javaslang-collections.png?w=660" alt="Javaslang Collections">
 </div>
 </div>
 <div class="paragraph">
